--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "express": "~3.3.4",
     "jade": "~0.34.0",
-    "mongoskin": "~0.6.0"
+    "mongoskin": "~0.6.0",
+    "mongodb": "~1.4.5"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
